packages/compiler/ssr-tests/snapshots/ssr__ssr_no_shadow.snap
---
source: tests/ssr.rs
expression: method
---
$$__ssr(): string {
return `<no-shadow-app><div class="light"><span class="count">${$__ssrText(this.state.count)}</span><button class="inc">+1</button></div></no-shadow-app>`;
}
