packages/compiler/ssr-tests/snapshots/ssr__ssr_shadow_button.snap
---
source: tests/ssr.rs
expression: ssr_method_text(&compiled)
---
$$__ssr(): string {
return `<ssr-button><template shadowrootmode="open" shadowrootserializable=""><style data-ssr>${css}</style><button class="${$__ssrAttr(this.state.tone)}">${$__ssrText(this.state.label)}</button></template></ssr-button>`;
}
